# marika_map_collaborations

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: marika_addresses.csv  sample_addresses.csv
dry_run_outputs/: geocoded_addresses.csv  montreal_map.html  quebec_map.html  world_map.html
outputs/: geocoded_addresses.csv  montreal_map.html  quebec_map.html  world_globe.html  world_map.html  world_map_no_labels.html
src/marika_map_collaborations/: __init__.py  cli.py  map_maker.py
