[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marika-map-collaborations"
version = "0.1.0"
description = "Generate presentation-ready maps from a CSV of addresses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "folium>=0.20.0",
  "geopy>=2.4.1",
  "pandas>=2.2.3",
]

[project.scripts]
make-address-maps = "marika_map_collaborations.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
